--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <form method="POST" action="">
             <section>
-                <div class="item">
+                <div>
                     <p>
                         <?php
                             if(isset($_GET['msg']))
