--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="Css/footerHeader.css">
         <title>DinerSol | Iniciar Sesión</title>
     </head>
     <body>
         <header>
-            <!-- HEADER -->
+            <div class="header">
+                <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
+                <div>
+                    <h3>Universidad Tecnológica De Panamá</h3>
+                    <h1>DinerSol - Sistema De Cafeterías UTP</h1>
+                </div>
+            </div>
         </header>
         <hr>
         <section>
@@ -16,11 +23,11 @@
             </div>
         </section>
 
-        <h2>INGRESE SUS DATOS:</h2>
+        <h2 id="t">INGRESE SUS DATOS:</h2>
 
         <form method="POST" action="">
             <section>
-                <div>
+                <div class="item">
                     <p>
                         <?php
                             if(isset($_GET['msg']))
@@ -30,43 +37,55 @@
                 </div>
             </section>
             <section>
-                <div>
+                <div class="item">
                     <label for="correo">Correo:</label><br>
                     <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
                     <br><br>
                 </div>
             </section>
             <section>
-                <div>
+                <div class="item">
                     <label for="contra1">Contraseña:</label><br>
                     <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
                     <br>
                 </div>
             </section>
             <section>
-                <div>
+                <div class="item">
                     <input type="checkbox" onclick="Mostrar()">Mostrar Contraseña
                 </div>
                 <br>
             </section>
             <section>
-                <div>
+                <div class="item">
                     <input type="reset" value="Vaciar">
                 </div>
-                <div>
+                <div class="item">
                     <input type="submit" value="Ingresar">
                 </div>
                 <br>
             </section>
         </form>
         <section>
-            <div>
+            <div class="item">
                 <label for="recuperar">¿Olvidaste tu contraseña?</label><br>
                 <input type="button" id="recuperar" value="Recuperar" onclick="window.location.href='Secciones/recuperarContraseña.html'">
             </div>
         </section>
+        <hr>
         <footer>
-            <!-- FOOTER -->
+            <div class="footer">
+                <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
+                <h3>
+                    Universidad Tecnológica de Panamá - 2021<br>
+                    Dirección: Avenida Universidad Tecnológica de Panamá, Vía Puente Centenario,<br>
+                    Campus Metropolitano Víctor Levi Sasso.<br>
+                    Teléfono. (507) 560-3000<br>
+                    Correo electrónico: buzondesugerencias@utp.ac.pa<br>
+                    311 Centro de Atención Ciudadana<br>
+                    Políticas de Privacidad<br>
+                </h3>
+            </div>
         </footer>
         <script type="text/javascript" src="JavaScript/complementos.js"></script>
     </body>
