--- a/Secciones/registrarse.html
+++ b/Secciones/registrarse.html
@@ -7,91 +7,70 @@
         <title>DinerSol | Registro</title>
     </head>
     <body>
-        <header>
-            <div class="header">
-                <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
-                <div>
-                    <h3>Universidad Tecnológica De Panamá</h3>
-                    <h1>DinerSol - Sistema De Cafeterías UTP</h1>
-                </div>
-            </div>
-        </header>
-        <hr>
-        <section>
+        <div class="header">
+            <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
             <div>
-                <input type="button" id="volver" value="Volver a Inicio" onclick="window.location.href='../index.html'">
+                <h3>Universidad Tecnológica De Panamá</h3>
+                <h1>DinerSol - Sistema De Cafeterías UTP</h1>
             </div>
-        </section>
+        </div>
+        <div>
+            <input type="button" id="volver" value="Volver a Inicio" onclick="window.location.href='../index.html'">
+        </div>
 
         <h2>INGRESE SUS DATOS:</h2>
 
         <form name="formRegistro" method="POST" action="">
-            <section>
-                <div>
-                    <label for="nombre">Nombre:</label><br>
-                    <input type="text" id="nombre" name="nombre" placeholder="Ej: Aurelio" maxlength="50" required><br><br>
-                </div>
-                <div>
-                    <label for="apellido">Apellido:</label><br>
-                    <input type="text" id="apellido" name="apellido" placeholder="Ej: Morales" maxlength="50" required><br><br>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <label for="cedula">Cédula:</label><br>
-                    <input type="text" id="cedula" name="cedula" placeholder="Ej: 1-111-1111" maxlength="15" required><br><br>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <label for="correo">Correo:</label><br>
-                    <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
-                    <br><br>
-                </div>
-                <div>
-                    <label for="telefono">Teléfono Personal:</label><br>
-                    <input type="tel" id="telefono" name="telefono" placeholder="Ej: 1111-1111" pattern="[0-9]{4}-[0-9]{4}" required>
-                    <br><br>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <label for="contra1">Contraseña:</label><br>
-                    <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
-                    <br>
-                </div>
-                <div>
-                    <label for="contra2">Repetir Contraseña:</label><br>
-                    <input type="password" id="contra2" name="contra2" placeholder="**********" maxlength="30" required>
-                    <br>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <input type="checkbox" onclick="Mostrar()">Mostrar Contraseñas
-                    <br><br>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <p>
-                        <?php
-                            if(isset($_GET['msg']))
-                                echo $_GET['msg'];
-                        ?>
-                    </p>
-                </div>
-            </section>
-            <section>
-                <div>
-                    <input type="reset" value="Vaciar">
-                </div>
-                <div>
-                    <input type="submit" onclick="ComprobarClave()" value="Aceptar">
-                </div>
-            </section>
+            <div>
+                <label for="nombre">Nombre:</label><br>
+                <input type="text" id="nombre" name="nombre" placeholder="Ej: Aurelio" maxlength="50" required><br><br>
+            </div>
+            <div>
+                <label for="apellido">Apellido:</label><br>
+                <input type="text" id="apellido" name="apellido" placeholder="Ej: Morales" maxlength="50" required><br><br>
+            </div>
+            <div>
+                <label for="cedula">Cédula:</label><br>
+                <input type="text" id="cedula" name="cedula" placeholder="Ej: 1-111-1111" maxlength="15" required><br><br>
+            </div>
+            <div>
+                <label for="correo">Correo:</label><br>
+                <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
+            </div>
+            <div>
+                <label for="telefono">Teléfono Personal:</label><br>
+                <input type="tel" id="telefono" name="telefono" placeholder="Ej: 1111-1111" pattern="[0-9]{4}-[0-9]{4}" required>
+                <br><br>
+            </div>
+            <div>
+                <label for="contra1">Contraseña:</label><br>
+                <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
+                <br>
+            </div>
+            <div>
+                <label for="contra2">Repetir Contraseña:</label><br>
+                <input type="password" id="contra2" name="contra2" placeholder="**********" maxlength="30" required>
+                <br>
+            </div>
+            <div>
+                <input type="checkbox" onclick="Mostrar()">Mostrar Contraseñas
+                <br><br>
+            </div><!--
+            <div>
+                <p>
+                    <?php
+                        if(isset($_GET['msg']))
+                            echo $_GET['msg'];
+                    ?>
+                </p>
+            </div>-->
+            <div>
+                <input type="reset" value="Vaciar">
+            </div>
+            <div>
+                <input type="submit" onclick="ComprobarClave()" value="Aceptar">
+            </div>
         </form>
-        <hr>
         <footer>
             <div class="footer">
                 <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
