--- a/index.html
+++ b/index.html
@@ -1,78 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="Css/login.css">
         <link rel="stylesheet" href="Css/footerHeader.css">
         <title>DinerSol | Iniciar Sesión</title>
     </head>
     <body>
-        <header>
-            <div class="header">
-                <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
-                <div>
-                    <h3>Universidad Tecnológica De Panamá</h3>
-                    <h1>DinerSol - Sistema De Cafeterías UTP</h1>
-                </div>
-            </div>
-        </header>
-        <hr>
-        <section>
+        <div class="header">
+            <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
             <div>
-                <input type="button" id="registro" value="Registrarse" onclick="window.location.href='Secciones/registrarse.html'">
+                <h3>Universidad Tecnológica De Panamá</h3>
+                <h1>DinerSol - Sistema De Cafeterías UTP</h1>
             </div>
-        </section>
-
-        <h2 id="t">INGRESE SUS DATOS:</h2>
-
-        <form method="POST" action="">
-            <section>
-                <div class="item">
-                    <p>
-                        <?php
-                            if(isset($_GET['msg']))
-                                echo $_GET['msg'];
-                        ?>
-                    </p>
+        </div>
+        <div>
+            <input type="button" class="btnRegistrarse botones" id="registro" value="Registrarse" onclick="window.location.href='Secciones/registrarse.html'">
+        </div>
+        <div class="todo">
+            <h1 class="login">Login</h1>
+            <form method="POST" action="">
+                <div class="card"><br>
+                    <h2 id="t">INGRESE SUS DATOS</h2>
+                    <div class="ComidasMenu">
+                        <div class="item">
+                            <label for="correo">Correo:</label><br>
+                            <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
+                        </div>
+                        <div class="item">
+                            <label for="contra1">Contraseña:</label><br>
+                            <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
+                        </div>
+                        <div class="item">
+                            <input type="checkbox" onclick="Mostrar()">Mostrar Contraseña
+                        </div>
+                        <div class="item">
+                            <input type="reset" class="botones" value="Vaciar">
+                            <input type="submit" class="botones" value="Ingresar">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <label for="recuperar">¿Olvidaste tu contraseña?</label><br>
+                        <input type="button" class="botones" id="recuperar" value="Recuperar" onclick="window.location.href='Secciones/recuperarContraseña.html'">
+                    </div><br>
                 </div>
-            </section>
-            <section>
-                <div class="item">
-                    <label for="correo">Correo:</label><br>
-                    <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
-                    <br><br>
-                </div>
-            </section>
-            <section>
-                <div class="item">
-                    <label for="contra1">Contraseña:</label><br>
-                    <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
-                    <br>
-                </div>
-            </section>
-            <section>
-                <div class="item">
-                    <input type="checkbox" onclick="Mostrar()">Mostrar Contraseña
-                </div>
-                <br>
-            </section>
-            <section>
-                <div class="item">
-                    <input type="reset" value="Vaciar">
-                </div>
-                <div class="item">
-                    <input type="submit" value="Ingresar">
-                </div>
-                <br>
-            </section>
-        </form>
-        <section>
-            <div class="item">
-                <label for="recuperar">¿Olvidaste tu contraseña?</label><br>
-                <input type="button" id="recuperar" value="Recuperar" onclick="window.location.href='Secciones/recuperarContraseña.html'">
-            </div>
-        </section>
-        <hr>
+            </form>
+        </div>
+        
         <footer>
             <div class="footer">
                 <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
