--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <label for="recuperar">¿Olvidaste tu contraseña?</label><br>
+                        <label for="recuperar" style="margin-top: 1.2%;">¿Olvidaste tu contraseña?</label><br>
                         <input type="button" class="botones" id="recuperar" value="Recuperar" onclick="window.location.href='Secciones/recuperarContraseña.html'">
                     </div><br>
                 </div>
