Página principal con Css

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="todo">
             <h1 class="login">Login</h1>
-            <form method="POST" action="">
-                <div class="card"><br>
+            <div class="card"><br>
+                <form method="POST" action="Secciones/paginaPrincipal.html">
                     <h2 id="t">INGRESE SUS DATOS</h2>
                     <div class="ComidasMenu">
                         <div class="item">
@@ -40,12 +40,12 @@
                             <input type="submit" class="botones" value="Ingresar">
                         </div>
                     </div>
-                    <div class="item">
-                        <label for="recuperar" style="margin-top: 1.2%;">¿Olvidaste tu contraseña?</label><br>
-                        <input type="button" class="botones" id="recuperar" value="Recuperar" onclick="window.location.href='Secciones/recuperarContraseña.html'">
-                    </div><br>
-                </div>
-            </form>
+                </form>
+                <div class="item">
+                    <label for="recuperar" style="margin-top: 1.2%;">¿Olvidaste tu contraseña?</label><br>
+                    <input type="button" class="botones" id="recuperar" value="Recuperar" onclick="window.location.href='Secciones/recuperarContraseña.html'">
+                </div><br>
+            </div>
         </div>
         
         <footer>
