--- a/Secciones/AMenu.html
+++ b/Secciones/AMenu.html
@@ -4,11 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../Css/menu izquierda.css">
+        <link rel="stylesheet" href="../Css/footerHeader.css">
         <title>Administración | Agregar</title>
     </head>
     <body>
         <header>
-            <h1>Header nav generalizado</h1>
+            <div class="header">
+                <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
+                <div>
+                    <h3>Universidad Tecnológica De Panamá</h3>
+                    <h1>DinerSol - Sistema De Cafeterías UTP</h1>
+                </div>
+            </div>
         </header>
         <hr>
         <h2>Administración del Menú</h2>
@@ -54,15 +61,27 @@
                     <input type="reset" value="Vaciar"><br><br>
                 </div>
             </section>
-        </form>
         <section>
             <div class="end">
                 <input type="button" id="add" value="Agregar Menú">
             </div>
             <div class="end"><br><br>
-                <input type="button" value="Volver al inicio" onclick="window.location.href='../Secciones/paginaPrincipal.html'">
+                <input type="button" value="Volver al inicio" onclick="window.location.href='../Secciones/paginaPrincipal.html'"><br><br>
             </div>
         </section>
+    </form>
+    <div class="footer">
+        <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
+        <h3>
+            Universidad Tecnológica de Panamá - 2021<br>
+            Dirección: Avenida Universidad Tecnológica de Panamá, Vía Puente Centenario,<br>
+            Campus Metropolitano Víctor Levi Sasso.<br>
+            Teléfono. (507) 560-3000<br>
+            Correo electrónico: buzondesugerencias@utp.ac.pa<br>
+            311 Centro de Atención Ciudadana<br>
+            Políticas de Privacidad<br>
+        </h3>
+    </div>
         <script type="text/javascript" src="../JavaScript/complementos.js"></script>
     </body>
 </html>
