Css en las paginas del login por mientras

--- a/Secciones/paginaPrincipal.html
+++ b/Secciones/paginaPrincipal.html
@@ -44,7 +44,7 @@
             <input type="radio" id="cafeteria3" name="cafet" onclick="Cual(3)">
             <input type="radio" id="cafeteria4" name="cafet" onclick="Cual(4)">
         </div>
-        
+        <h3 style="text-align: center;">Número identificador de su último pedido: 0012012</h3>        
         <div class="NoticiasMenu">
             <div class="Menu">
                 <div class="Central">
@@ -146,7 +146,7 @@
                         <div class="card">
                             <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
-                                <h4 class="h3Titulo"><b>Soda Coca-Cola</b></h4> 
+                                <h4 class="h3Titulo"><b>Jugo Del Monte</b></h4> 
                                 <h4 class="Precio">$1.50</h4> 
                             </div>
                         </div>
@@ -173,6 +173,23 @@
                 311 Centro de Atención Ciudadana<br>
                 Políticas de Privacidad<br>
             </h3>
+            <div class="footerP1">
+                <a href="">Matrícula UTP</a><br>
+                <a href="">Correo UTP</a><br>
+                <a href="">Biblioteca UTP</a><br>
+                <a href="">Publicaciones</a><br>
+                <a href="">Sala De Prensa</a><br>
+                <a href="">Bolsa De Trabajo</a><br>
+                <a href="">Acreditación</a><br>
+                <a href="">Centro De Lenguas</a><br>
+            </div>
+            <div class="footerP2">
+                <a href="">Mapa De Ubicación</a><br>
+                <a href="">Mapa Del Sitio</a><br>
+                <a href="">Directorio Telefónico</a><br>
+                <a href="">Contáctenos</a><br>
+                <a href="">Identidad Visual</a><br>
+            </div>
         </div>
         <script type="text/javascript" src="../JavaScript/complementos.js"></script>
     </body>
