--- a/Secciones/recuperarContraseña.html
+++ b/Secciones/recuperarContraseña.html
@@ -19,7 +19,11 @@
             <input type="button" class="btnRegistrarse botones" id="volver" value="Volver a Inicio" onclick="window.location.href='../index.html'">
         </div>
         <div class="todo">
-            <h1 class="login">Recuperar Contraseña</h1>       
+            <nav>
+                <a href="../index.html">Login</a>
+                <a href="registrarse.html">Registrarse</a>
+                <a class="navEspecial" href="#">Recuperar Contraseña</a>
+            </nav>       
             <form method="POST" action="">
                 <div class="card"><br>
                     <h2>MÉTODO DE RECUPERACIÓN</h2>
@@ -57,6 +61,23 @@
                     311 Centro de Atención Ciudadana<br>
                     Políticas de Privacidad<br>
                 </h3>
+                <div class="footerP1">
+                    <a href="">Matrícula UTP</a><br>
+                    <a href="">Correo UTP</a><br>
+                    <a href="">Biblioteca UTP</a><br>
+                    <a href="">Publicaciones</a><br>
+                    <a href="">Sala De Prensa</a><br>
+                    <a href="">Bolsa De Trabajo</a><br>
+                    <a href="">Acreditación</a><br>
+                    <a href="">Centro De Lenguas</a><br>
+                </div>
+                <div class="footerP2">
+                    <a href="">Mapa De Ubicación</a><br>
+                    <a href="">Mapa Del Sitio</a><br>
+                    <a href="">Directorio Telefónico</a><br>
+                    <a href="">Contáctenos</a><br>
+                    <a href="">Identidad Visual</a><br>
+                </div>
             </div>
         </footer>
         <script type="text/javascript" src="../JavaScript/complementos.js"></script>
