--- a/Secciones/registrarse.html
+++ b/Secciones/registrarse.html
@@ -4,73 +4,89 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../Css/footerHeader.css">
+        <link rel="stylesheet" href="../Css/login.css">
         <title>DinerSol | Registro</title>
     </head>
     <body>
         <div class="header">
-            <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
+            <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
             <div>
                 <h3>Universidad Tecnológica De Panamá</h3>
                 <h1>DinerSol - Sistema De Cafeterías UTP</h1>
             </div>
         </div>
         <div>
-            <input type="button" id="volver" value="Volver a Inicio" onclick="window.location.href='../index.html'">
+            <input type="button" class="btnRegistrarse botones" id="volver" value="Volver a Inicio" onclick="window.location.href='../index.html'">
         </div>
-
-        <h2>INGRESE SUS DATOS:</h2>
-
-        <form name="formRegistro" method="POST" action="">
-            <div>
-                <label for="nombre">Nombre:</label><br>
-                <input type="text" id="nombre" name="nombre" placeholder="Ej: Aurelio" maxlength="50" required><br><br>
-            </div>
-            <div>
-                <label for="apellido">Apellido:</label><br>
-                <input type="text" id="apellido" name="apellido" placeholder="Ej: Morales" maxlength="50" required><br><br>
-            </div>
-            <div>
-                <label for="cedula">Cédula:</label><br>
-                <input type="text" id="cedula" name="cedula" placeholder="Ej: 1-111-1111" maxlength="15" required><br><br>
-            </div>
-            <div>
-                <label for="correo">Correo:</label><br>
-                <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
-            </div>
-            <div>
-                <label for="telefono">Teléfono Personal:</label><br>
-                <input type="tel" id="telefono" name="telefono" placeholder="Ej: 1111-1111" pattern="[0-9]{4}-[0-9]{4}" required>
-                <br><br>
-            </div>
-            <div>
-                <label for="contra1">Contraseña:</label><br>
-                <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
-                <br>
-            </div>
-            <div>
-                <label for="contra2">Repetir Contraseña:</label><br>
-                <input type="password" id="contra2" name="contra2" placeholder="**********" maxlength="30" required>
-                <br>
-            </div>
-            <div>
-                <input type="checkbox" onclick="Mostrar()">Mostrar Contraseñas
-                <br><br>
-            </div><!--
-            <div>
-                <p>
-                    <?php
-                        if(isset($_GET['msg']))
-                            echo $_GET['msg'];
-                    ?>
-                </p>
-            </div>-->
-            <div>
-                <input type="reset" value="Vaciar">
-            </div>
-            <div>
-                <input type="submit" onclick="ComprobarClave()" value="Aceptar">
-            </div>
-        </form>
+        <div class="todo">
+            <nav>
+                <a href="../index.html">Login</a>
+                <a class="navEspecial" href="#">Registrarse</a>
+                <a href="recuperarContraseña.html">Recuperar Contraseña</a>
+            </nav>
+            <form name="formRegistro" method="POST" action="">
+                <div class="card"><br>
+                    <h2>INGRESE SUS DATOS</h2>
+                    <div class="ComidasMenu">
+                        <div class="Secciones">
+                            <div class="item">
+                                <label for="nombre">Nombre:</label><br>
+                                <input type="text" id="nombre" name="nombre" placeholder="Ej: Aurelio" maxlength="50" required><br><br>
+                            </div>
+                            <div class="item">
+                                <label for="apellido">Apellido:</label><br>
+                                <input type="text" id="apellido" name="apellido" placeholder="Ej: Morales" maxlength="50" required><br><br>
+                            </div>
+                        </div>
+                        <div class="Secciones">
+                            <div class="item">
+                                <label for="cedula">Cédula:</label><br>
+                                <input type="text" id="cedula" name="cedula" placeholder="Ej: 1-111-1111" maxlength="15" required><br><br>
+                            </div>
+                            <div class="item">
+                                <label for="correo">Correo:</label><br>
+                                <input type="email" id="correo" name="correo" placeholder="Ej: usuario@ejemplo.com" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" maxlength="200" required>
+                            </div>
+                        </div>
+                        <div class="Secciones">
+                            <div class="item">
+                                <label for="telefono">Teléfono Personal:</label><br>
+                                <input type="tel" id="telefono" name="telefono" placeholder="Ej: 1111-1111" pattern="[0-9]{4}-[0-9]{4}" required>
+                                <br><br>
+                            </div>
+                            <div class="item">
+                                <label for="contra1">Contraseña:</label><br>
+                                <input type="password" id="contra1" name="contra1" placeholder="**********" maxlength="30" required>
+                                <br>
+                            </div>
+                            <div class="item">
+                                <label for="contra2">Repetir Contraseña:</label><br>
+                                <input type="password" id="contra2" name="contra2" placeholder="**********" maxlength="30" required>
+                                <br>
+                            </div>
+                        </div>
+                        
+                        <div class="item">
+                            <input type="checkbox" onclick="Mostrar()">Mostrar Contraseñas
+                            <br><br>
+                        </div>
+                    </div>
+                    <!--
+                    <div>
+                        <p>
+                            <?php
+                                if(isset($_GET['msg']))
+                                    echo $_GET['msg'];
+                            ?>
+                        </p>
+                    </div>-->
+                    <div class="item">
+                        <input type="reset" class="botones" value="Vaciar">
+                        <input type="submit" class="botones" onclick="ComprobarClave()" value="Aceptar">
+                    </div>
+                </div>
+            </form>
+        </div>
         <footer>
             <div class="footer">
                 <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
@@ -83,6 +99,23 @@
                     311 Centro de Atención Ciudadana<br>
                     Políticas de Privacidad<br>
                 </h3>
+                <div class="footerP1">
+                    <a href="">Matrícula UTP</a><br>
+                    <a href="">Correo UTP</a><br>
+                    <a href="">Biblioteca UTP</a><br>
+                    <a href="">Publicaciones</a><br>
+                    <a href="">Sala De Prensa</a><br>
+                    <a href="">Bolsa De Trabajo</a><br>
+                    <a href="">Acreditación</a><br>
+                    <a href="">Centro De Lenguas</a><br>
+                </div>
+                <div class="footerP2">
+                    <a href="">Mapa De Ubicación</a><br>
+                    <a href="">Mapa Del Sitio</a><br>
+                    <a href="">Directorio Telefónico</a><br>
+                    <a href="">Contáctenos</a><br>
+                    <a href="">Identidad Visual</a><br>
+                </div>
             </div>
         </footer>
         <script type="text/javascript" src="../JavaScript/complementos.js"></script>
