--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             <input type="button" class="btnRegistrarse botones" id="registro" value="Registrarse" onclick="window.location.href='Secciones/registrarse.html'">
         </div>
         <div class="todo">
-            <h1 class="login">Login</h1>
+            <nav>
+                <a href="#" class="navEspecial">Login</a>
+                <a href="Secciones/registrarse.html">Registrarse</a>
+                <a href="Secciones/recuperarContraseña.html">Recuperar Contraseña</a>
+            </nav>
             <div class="card"><br>
                 <form method="POST" action="Secciones/paginaPrincipal.html">
                     <h2 id="t">INGRESE SUS DATOS</h2>
@@ -60,6 +64,23 @@
                     311 Centro de Atención Ciudadana<br>
                     Políticas de Privacidad<br>
                 </h3>
+                <div class="footerP1">
+                    <a href="">Matrícula UTP</a><br>
+                    <a href="">Correo UTP</a><br>
+                    <a href="">Biblioteca UTP</a><br>
+                    <a href="">Publicaciones</a><br>
+                    <a href="">Sala De Prensa</a><br>
+                    <a href="">Bolsa De Trabajo</a><br>
+                    <a href="">Acreditación</a><br>
+                    <a href="">Centro De Lenguas</a><br>
+                </div>
+                <div class="footerP2">
+                    <a href="">Mapa De Ubicación</a><br>
+                    <a href="">Mapa Del Sitio</a><br>
+                    <a href="">Directorio Telefónico</a><br>
+                    <a href="">Contáctenos</a><br>
+                    <a href="">Identidad Visual</a><br>
+                </div>
             </div>
         </footer>
         <script type="text/javascript" src="JavaScript/complementos.js"></script>
