Pagina principal con imágenes

--- a/Secciones/paginaPrincipal.html
+++ b/Secciones/paginaPrincipal.html
@@ -44,7 +44,7 @@
             <input type="radio" id="cafeteria3" name="cafet" onclick="Cual(3)">
             <input type="radio" id="cafeteria4" name="cafet" onclick="Cual(4)">
         </div>
-        <h3 style="text-align: center;">Número identificador de su último pedido: 0012012</h3>        
+        <h2 style="text-align: center;">Número identificador de su último pedido: <strong>0012012</strong></h2>        
         <div class="NoticiasMenu">
             <div class="Menu">
                 <div class="Central">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="ComidasDeCafeterias">
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/arrozConPollo.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Arroz Con Pollo</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
@@ -65,37 +65,37 @@
                         <div class="card">
                             <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
-                                <h4 class="h3Titulo"><b>Arroz Con Pollo</b></h4> 
+                                <h4 class="h3Titulo"><b>Macarrones</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/arrozPescadoEnsalada.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
-                                <h4 class="h3Titulo"><b>Arroz Con Pollo</b></h4> 
+                                <h4 class="h3Titulo"><b>Arroz Con Pescado Y Ensalada</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
                     </div>
                     <div class="ComidasDeCafeterias">
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/coditosConSalchicha.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
-                                <h4 class="h3Titulo"><b>Arroz Con Pollo</b></h4> 
+                                <h4 class="h3Titulo"><b>Coditos Con Salchichas</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/arrozConLentejasYCarne.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
-                                <h4 class="h3Titulo"><b>Arroz Con Pollo</b></h4> 
+                                <h4 class="h3Titulo"><b>Arroz Con Lentejas Y Carne</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/arrozConSalchichaGuisada.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
-                                <h4 class="h3Titulo"><b>Arroz Con Pollo</b></h4> 
+                                <h4 class="h3Titulo"><b>Arroz Con Salchichas Guisadas</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
@@ -109,21 +109,21 @@
                     </div>
                     <div class="ComidasDeCafeterias">
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/snickers.png" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Snickers</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/galletaSaltine.png" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Galleta Saltine</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/galletaMaria.png" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Galleta María</b></h4> 
                                 <h4 class="Precio">$1.25</h4> 
@@ -137,21 +137,21 @@
                     </div>
                     <div class="ComidasDeCafeterias">
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/botellaDeAgua.png" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Agua</b></h4> 
                                 <h4 class="Precio">$0.75</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/jugoDelMonte.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Jugo Del Monte</b></h4> 
                                 <h4 class="Precio">$1.50</h4> 
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../Imagenes/Comida1.jpg" class="FotoComida" alt="Comida1" width="65%" height="65%">
+                            <img src="../Imagenes/maltaVigor.png" class="FotoComida" alt="Comida1" width="65%" height="65%">
                             <div class="ComidasMenu">
                                 <h4 class="h3Titulo"><b>Malta Vigor</b></h4> 
                                 <h4 class="Precio">$1.00</h4> 
