Añadiendo la página de Estadística con Css

--- a/Secciones/paginaPrincipal.html
+++ b/Secciones/paginaPrincipal.html
@@ -23,7 +23,7 @@
             <a href="">Cafeterías</a>
             <a href="">Ayuda Estudiantil</a>
             <a href="">Historial De Compras</a>
-            <a href="">Otra Función</a>
+            <a href="estadisticas.html">Estadísticas</a>
         </nav>
         <div class="CafCentral" id="CafCentral">
             <h1 class="NomCafeteria">Cafetería Central</h1>   
