--- a/Secciones/footer.html
+++ b/Secciones/footer.html
@@ -17,6 +17,23 @@
                 311 Centro de Atención Ciudadana<br>
                 Políticas de Privacidad<br>
             </h3>
+            <div class="footerP1">
+                <a href="">Matrícula UTP</a><br>
+                <a href="">Correo UTP</a><br>
+                <a href="">Biblioteca UTP</a><br>
+                <a href="">Publicaciones</a><br>
+                <a href="">Sala De Prensa</a><br>
+                <a href="">Bolsa De Trabajo</a><br>
+                <a href="">Acreditación</a><br>
+                <a href="">Centro De Lenguas</a><br>
+            </div>
+            <div class="footerP2">
+                <a href="">Mapa De Ubicación</a><br>
+                <a href="">Mapa Del Sitio</a><br>
+                <a href="">Directorio Telefónico</a><br>
+                <a href="">Contáctenos</a><br>
+                <a href="">Identidad Visual</a><br>
+            </div>
         </div>
     </body>
 </html>
