Página de estadísticas hecha completa

--- a/Secciones/estadisticas.html
+++ b/Secciones/estadisticas.html
@@ -26,6 +26,9 @@
             <a href="">Historial De Compras</a>
             <a href="" class="navEspecial">Estadísticas</a>
         </nav>
+        <div class="TituloCompleto">
+            <h1>Estadísticas Generales</h1>
+        </div>
         <div class="Campos">
             <h2>Buscar un periodo</h2>
             <form action="" method="POST">
@@ -38,9 +41,9 @@
                 <input type="submit" value="Buscar" class="buscar">
                 <button><a href="">Generar Reportes</a></button>
             </form>
-        </div>
+        </div><hr>
         <div class="card">
-            <h2 class="TituloTabla">Ventas De ***Los Menús</h2>
+            <h2 class="TituloTabla">Ventas De Los Menús</h2>
             <table>
                 <thead>
                     <tr>
@@ -116,7 +119,7 @@
         </div>
         <div class="RefrescoSnack">
             <div class="card2">
-                <h2 class="TituloTabla">Ventas De ***Los Snacks</h2>
+                <h2 class="TituloTabla">Ventas De Los Snacks</h2>
                 <table>
                     <thead>
                         <tr>
@@ -155,7 +158,7 @@
                 </table><br>
             </div>
             <div class="card2">
-                <h2 class="TituloTabla">Ventas De ***Los Refrescos</h2>
+                <h2 class="TituloTabla">Ventas De Los Refrescos</h2>
                 <table>
                     <thead>
                         <tr>
@@ -197,7 +200,7 @@
 
         <div class="RefrescoSnack">
             <div class="card2">
-                <h2 class="TituloTabla">Estadísticas De ***Los Utencilios</h2>
+                <h2 class="TituloTabla">Estadísticas De Los Utencilios</h2>
                 <table>
                     <thead>
                         <tr>
@@ -234,7 +237,7 @@
                 </table><br>
             </div>
             <div class="card2">
-                <h2 class="TituloTabla">Estadísticas De ***Los Pedidos</h2>
+                <h2 class="TituloTabla">Estadísticas De Los Pedidos</h2>
                 <table>
                     <thead>
                         <tr>
@@ -272,7 +275,7 @@
                     </tbody>
                 </table><br>
             </div>
-        </div><br>
+        </div><br><hr>
         <h2 style="text-align: center;">***Los resultados de las estadísticas están calculadas en base al tiempo de búsqueda escogido***</h2>
         <div class="footer">
             <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
