--- a/Secciones/paginaPrincipal.html
+++ b/Secciones/paginaPrincipal.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
         <link rel="stylesheet" href="../Css/footerHeader.Css">
+        <link rel="stylesheet" href="../Css/drpdwn.css">
     </head>
     <body>
         <div class="header">
@@ -15,7 +16,15 @@
             </div>
         </div>
         <div class="fotoUser">
-            <h3>Aurelio Morales</h3>
+            <!-- <h3>Aurelio Morales</h3> -->
+            <div class="dropdown">
+                <button class="dropbtn"><b>Aurelio Morales</b></button>
+                <div class="dropdown-content">
+                  <a href="perfilDeUsuario.html">Mi Perfil</a>
+                  <a href="">Pedido</a>
+                  <a href="../index.html">Cerrar Sesión</a>
+                </div>
+            </div>
             <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
         </div>
         <nav>
