--- a/Secciones/recuperarContraseña.html
+++ b/Secciones/recuperarContraseña.html
@@ -29,7 +29,7 @@
                     <h2>MÉTODO DE RECUPERACIÓN</h2>
                     <div class="ComidasMenu">
                         <div class="item">
-                            <input type="radio" id="radioCor" name="tipo" onclick="Tipo(1)" required>
+                            <input type="radio" id="radioCor" name="tipo" onclick="Tipo(1)" checked required>
                             <label for="radioCor">Correo</label>
                             <input type="radio" id="radioTel" name="tipo" onclick="Tipo(2)">
                             <label for="radioTel">Teléfono</label>
@@ -43,7 +43,7 @@
                         <h2>El proceso de recuperación de contraseñas puede tardar unos minutos...</h2>
                         <div class="item">
                             <input type="reset" class="botones" value="Vaciar">
-                            <input type="submit" class="botones" value="Ingresar">
+                            <input type="submit" class="botones" value="Ingresar" onclick="window.location.href='../index.html'">
                         </div>
                     </div>
                 </div>
