--- a/Secciones/paginaPrincipal.html
+++ b/Secciones/paginaPrincipal.html
@@ -35,18 +35,18 @@
             <a href="estadisticas.html">Estadísticas</a>
         </nav>
         <div class="CafCentral" id="CafCentral">
-            <h1 class="NomCafeteria">Cafetería Central</h1>   
-            <img src="../Imagenes/CafeteriaCentral.jpg" alt="Cafetería Central" width="25%" height="25%">
+            <h1 id="nameCafe" class="NomCafeteria">Cafetería Central</h1>   
+            <img id="imgCafe" src="../Imagenes/CafeteriaCentral.jpg" alt="Cafetería Central" width="25%" height="25%">
             <h1 class="NomCafeteria">Turno Vespertino</h1>
         </div>
-        <div class="CafEdi1PB" id="CafEdi1PB" style="display: none;">
+        <!-- <div class="CafEdi1PB" id="CafEdi1PB" style="display: none;">
             <h1 class="NomCafeteria">Cafetería Del Edificio 1 - Planta Baja</h1>   
             <img src="../Imagenes/CafeteriaEdi1PB.PNG" alt="Cafetería Central" width="25%" height="25%">
         </div>
         <div class="CafEdi1P2" id="CafEdi1P2" style="display: none;">
             <h1 class="NomCafeteria">Cafetería Del Edificio 1 - Piso 2</h1>   
             <img src="../Imagenes/CafeteriaEdi1P2.PNG" alt="Cafetería Central" width="25%" height="25%">
-        </div>
+        </div> -->
         <div class="radios">
             <input type="radio" id="cafeteria1" name="cafet" onclick="Cual(1)" checked>
             <input type="radio" id="cafeteria2" name="cafet" onclick="Cual(2)">
